fix loader not showing on first request

--- a/public/stylesheets/chart.css
+++ b/public/stylesheets/chart.css
@@ -1,8 +1,9 @@
 #chart {
 	text-align: center;
-	position: relative;
 	overflow: auto;
 	width: 100%;
+	min-height: 32px;
+	position:relative;
 }
 #loader {
 	background-color: rgba(255,255,255, 0.7);
